[gd_scene load_steps=4 format=3 uid="uid://cs4rdc3gomuo0"]

[ext_resource type="Script" path="res://Scenes/Objects/Affordances/locked_door.gd" id="1_5tcis"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r6c0y"]
resource_local_to_scene = true
size = Vector2(48, 48)

[sub_resource type="CircleShape2D" id="CircleShape2D_7v6he"]
resource_local_to_scene = true
radius = 0.0

[node name="LockedDoor" type="StaticBody2D"]
script = ExtResource("1_5tcis")
_size = Vector2i(3, 3)

[node name="Sprites" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(24, 24)
shape = SubResource("RectangleShape2D_r6c0y")

[node name="DetectionArea" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(24, 24)
shape = SubResource("CircleShape2D_7v6he")

[node name="Status" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.5
offset_top = -15.0
offset_right = 53.5
grow_horizontal = 2
grow_vertical = 2
text = "Keys Left"

[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_entered"]
